-
Bug
-
Resolution: Done
-
P1: Critical
-
5.3.0 Beta1
-
None
-
-
58caedf0fdc6b63751577972473ae27dd36499f5
Regression compared to Qt 5.2.1
Using Mac offline enterprise installer (iOS/android) #21
Canvas on iOS are just black. Try for example the Qt Quick Canvas example (attached screenshot) or the simple test case below.
Test case:
import QtQuick 2.2 import QtQuick.Controls 1.1 ApplicationWindow { visible: true width: 640 height: 480 title: qsTr("Hello World") Canvas { anchors.fill: parent onPaint: { var ctx = getContext('2d') ctx.save() ctx.beginPath(); ctx.strokeStyle = '#FF0000' ctx.lineWidth = 5 ctx.translate(50, 50) ctx.moveTo(0, 0) ctx.lineTo(500, 500) ctx.stroke() ctx.closePath() ctx.restore(); } } }
- is required for
-
QTBUG-37065 Issues to be fixed before 5.3.0 RC1 release
-
- Closed
-
- relates to
-
QTBUG-38321 iOS: QQuickPaintedItem draw black background only
-
- Closed
-
| For Gerrit Dashboard: QTBUG-37646 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 82824,1 | Don't mipmap by default in QSGSimpleTextureNode | stable | qt/qtdeclarative | Status: MERGED | +2 | 0 |