Don't mipmap by default in QSGSimpleTextureNode

Task-number: QTBUG-37646
Change-Id: I2f27568ebd89c1f451f910dd03ea21c01c4adad1
Reviewed-by: Laszlo Agocs <laszlo.agocs@digia.com>